--- a/index.html
+++ b/index.html
@@ -4,8 +4,10 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="keywords" content="viaje,busco forma de viaje,quiero viajar,donde viajar,viaje rapido,vacaciones,viaje a buenos aires,viaje a santa fe,viaje a mendoza,viaje a cordoba">
+    <meta name="description" content="empresa de viaje,dedicada a buscar tu viaje soñado con las mejores ofertas y precios del mercado,contamos con toda la atencion que necesites y con mas de 100 aviones destinado para tu comodidad hacia el punto de viajes que prefieras">
     <link rel="stylesheet" href="./css/main.css">
-    <title>Document</title>
+    <title>Viaje | Inicio</title>
 </head>
 <body>
     <header class="bg_animate">
