--- a/paginas/servicios.html
+++ b/paginas/servicios.html
@@ -4,11 +4,13 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="keywords" content="viaje,busco forma de viaje,quiero viajar,donde viajar,viaje rapido,vacaciones,viaje a buenos aires,viaje a santa fe,viaje a mendoza,viaje a cordoba,servicios">
+  <meta name="description" content="Ven a buscar tu viaje soñado,tenemos viajes a buenos aires,mendoza,santa fe,cordoba y muchos lugar mas al mejor precio del mercado,con la atencion que estas buscando">
   <link rel="stylesheet" href="../css/main.css">
   <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Courier+Prime:ital@1&family=Fascinate&family=Fascinate+Inline&family=Lobster&family=Roboto:ital,wght@1,100&display=swap" rel="stylesheet">
-  <title>viaje</title>
+  <title>Viaje | Servicios</title>
 </head>
 <body>
   <header>
