--- a/index.html
+++ b/index.html
@@ -1,26 +1,34 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="keywords" content="viaje,busco forma de viaje,quiero viajar,donde viajar,viaje rapido,vacaciones,viaje a buenos aires,viaje a santa fe,viaje a mendoza,viaje a cordoba">
-    <meta name="description" content="empresa de viaje,dedicada a buscar tu viaje soñado con las mejores ofertas y precios del mercado,contamos con toda la atencion que necesites y con mas de 100 aviones destinado para tu comodidad hacia el punto de viajes que prefieras">
+    <meta name="keywords"
+        content="viaje,busco forma de viaje,quiero viajar,donde viajar,viaje rapido,vacaciones,viaje a buenos aires,viaje a santa fe,viaje a mendoza,viaje a cordoba">
+    <meta name="description"
+        content="empresa de viaje,dedicada a buscar tu viaje soñado con las mejores ofertas y precios del mercado,contamos con toda la atencion que necesites y con mas de 100 aviones destinado para tu comodidad hacia el punto de viajes que prefieras">
     <link rel="stylesheet" href="./css/main.css">
     <title>Viaje | Inicio</title>
 </head>
+
 <body>
     <header class="bg_animate">
         <div class="header_nav">
             <div class="contenedor">
-                <h1>Pagina De Viaje</h1>
+                <h1 class="h1-index">Pagina De Viaje</h1>
                 <nav>
-                    <a href="#">inicio</a>
+                    <a href="./index.html">inicio</a>
                     <a href="./paginas/servicios.html">servicios</a>
-                    <a href="#">contacto</a>
+                    <a href="./paginas/contacto.html">contacto</a>
                 </nav>
             </div>
     </header>
+
+    <body>
+
+
         <section class="banner  contenedor">
             <div class="banner_title">
                 <h2>Necesitas Ayuda! <br> Con Tu Viaje!</h2>
@@ -30,17 +38,36 @@
                 <img src="./imagenes/logo pagina.png" alt="">
             </div>
             <div class="burbujas">
-                <div class="burbujas">      
                 <div class="burbujas">
-                <div class="burbujas">
-                <div class="burbujas">
-                <div class="burbujas">
-                <div class="burbujas">
-                <div class="burbujas">
-                <div class="burbujas">
-            </div>
+                    <div class="burbujas">
+                        <div class="burbujas">
+                            <div class="burbujas">
+                                <div class="burbujas">
+                                    <div class="burbujas">
+                                        <div class="burbujas">
+                                            <div class="burbujas">
+                                            </div>
         </section>
-        
-    
+    </body>
+    <footer class="footer">
+        <ul class="ul-cs-link">
+            <li class="li-cs-link">
+                <a href="https://www.facebook.com/GreenpeaceArg" target="_blank">
+                    <img class="logo" src="./imagenes/facebook.png" alt="logo de facebook">
+                </a>
+
+                <a href="https://www.instagram.com/greenpeacearg/" target="_blank">
+                    <img class="logo" src="./imagenes/instagram.png" alt="logo de intagram">
+                </a>
+
+                <a href=https://www.whatsapp.com/?lang=es target="_blank">
+                    <img class="logo" src="./imagenes/whatsapp.png" alt="logo de whatsapp"></a>
+            </li>
+        </ul>
+        <span class="derechos">ⒸDerechos kevin Martinez</span>
+    </footer>
+
+
 </body>
+
 </html>
