agragando documento de texto

--- a/paginas/servicios.html
+++ b/paginas/servicios.html
@@ -6,7 +6,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="keywords"
-    content="viaje,busco forma de viaje,quiero viajar,donde viajar,viaje rapido,vacaciones,viaje a buenos aires,viaje a santa fe,viaje a mendoza,viaje a cordoba,servicios">
+    content="servicion de viaje,viaje,busco forma de viaje,quiero viajar,donde viajar,viaje rapido,vacaciones,viaje a buenos aires,viaje a santa fe,viaje a mendoza,viaje a cordoba,servicios">
   <meta name="description"
     content="Ven a buscar tu viaje soñado,tenemos viajes a buenos aires,mendoza,santa fe,cordoba y muchos lugar mas al mejor precio del mercado,con la atencion que estas buscando">
   <link rel="stylesheet" href="../css/main.css">
