agragando al proyecto final

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <meta name="description"
         content="empresa de viaje,dedicada a buscar tu viaje soñado con las mejores ofertas y precios del mercado,contamos con toda la atencion que necesites y con mas de 100 aviones destinado para tu comodidad hacia el punto de viajes que prefieras">
     <link rel="stylesheet" href="./css/main.css">
-    <title>Viaje | Inicio</title>
+    <title>Viaje| Inicio</title>
 </head>
 
 <body>
@@ -19,9 +19,11 @@
             <div class="contenedor">
                 <h1 class="h1-index">Pagina De Viaje</h1>
                 <nav>
-                    <a href="./index.html">inicio</a>
-                    <a href="./paginas/servicios.html">servicios</a>
-                    <a href="./paginas/contacto.html">contacto</a>
+                    <a class="anchor" href="./index.html">Inicio</a>
+                    <a class="anchor" href="./paginas/servicios.html">Servicios</a>
+                    <a class="anchor" href="./paginas/contacto.html">Contacto</a>
+                    <a class="anchor" href="./paginas/ofertas.html">Ofertas</a>
+                    <a class="anchor" href="./paginas/quienes-somos.html">Quines Somos</a>
                 </nav>
             </div>
     </header>
@@ -52,15 +54,15 @@
     <footer class="footer">
         <ul class="ul-cs-link">
             <li class="li-cs-link">
-                <a href="https://www.facebook.com/GreenpeaceArg" target="_blank">
+                <a class="redes-sociales" href="https://www.facebook.com/GreenpeaceArg" target="_blank">
                     <img class="logo" src="./imagenes/facebook.png" alt="logo de facebook">
                 </a>
 
-                <a href="https://www.instagram.com/greenpeacearg/" target="_blank">
+                <a class="redes-sociales" href="https://www.instagram.com/greenpeacearg/" target="_blank">
                     <img class="logo" src="./imagenes/instagram.png" alt="logo de intagram">
                 </a>
 
-                <a href=https://www.whatsapp.com/?lang=es target="_blank">
+                <a class="redes-sociales" href=https://www.whatsapp.com/?lang=es target="_blank">
                     <img class="logo" src="./imagenes/whatsapp.png" alt="logo de whatsapp"></a>
             </li>
         </ul>
