--- a/paginas/servicios.html
+++ b/paginas/servicios.html
@@ -23,11 +23,11 @@
     <nav class="navbar">
       <h1 class="texto-h1">Tus Viajes</h1>
       <ul class="lista-1">
-        <li class="item-1"><a href="../index.html">inicio</a></li>
-        <!-- <li class="item-1"><a href="#">servicios</a></li> -->
-        <li class="item-1"><a href="./contacto.html">contacto</a></li>
-        <li class="item-1"><a href="./ofertas.html">ofertas</a></li>
-        <li class="item-1"><a href="./quienes-somos.html">quienes somos</a></li>
+        <li class="item-1"><a class="anchor" href="../index.html">Inicio</a></li>
+        <li class="item-1"><a class="anchor" href="./contacto.html">Contacto</a></li>
+        <li class="item-1"><a class="anchor" href="./ofertas.html">Ofertas</a></li>
+        <li class="item-1"><a class="anchor" href="./quienes-somos.html">Quienes Somos</a></li>
+        <li class="item-1"><a class="anchor" href="./servicios.html">Servicios</a></li>
       </ul>
     </nav>
   </header>
@@ -61,15 +61,15 @@
   <footer class="footer">
     <ul class="ul-cs-link">
       <li class="li-cs-link">
-        <a href="https://www.facebook.com/GreenpeaceArg" target="_blank">
+        <a class="redes-sociales" href="https://www.facebook.com/GreenpeaceArg" target="_blank">
           <img class="logo" src="../imagenes/facebook.png" alt="logo de facebook">
         </a>
 
-        <a href="https://www.instagram.com/greenpeacearg/" target="_blank">
+        <a class="redes-sociales" href="https://www.instagram.com/greenpeacearg/" target="_blank">
           <img class="logo" src="../imagenes/instagram.png" alt="logo de intagram">
         </a>
 
-        <a href=https://www.whatsapp.com/?lang=es target="_blank">
+        <a class="redes-sociales" href=https://www.whatsapp.com/?lang=es target="_blank">
           <img class="logo" src="../imagenes/whatsapp.png" alt="logo de whatsapp"></a>
       </li>
     </ul>
